--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,2 +1,11 @@
 <h1>Rooms#new</h1>
 <p>Find me in app/views/rooms/new.html.erb</p>
+
+<%= form_with( model: @form, local:true) do |f|%>
+  <%= f.label :tag %>
+  <%= f.select :tag, @tags%>
+
+  <%= f.label :num_users %>
+  <%= f.number_field :num_users%>
+  <%= f.submit%>
+<% end %>
