--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Rooms#index</h1>
-<p>Find me in app/views/rooms/index.html.erb</p>
+<h1>Rooms</h1>
+<% @rooms.each do |room|%>
+  <p><%= room.info %></p>
+<% end %>
+
+<%= link_to 'New Room', new_room_path%>
+<%= form_with(model:@room, local:true) do|f|%>
+  <%= f.label :code%>
+  <%= f.text_field :code%>
+<% end %>
